<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.dili</groupId>
	<artifactId>assets</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<description>assets</description>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<!-- MyBatis Generator -->
		<!-- Java接口和实体类 -->
		<targetJavaProject>${basedir}/src/main/java</targetJavaProject>
		<targetMapperPackage>com.dili.assets.dao</targetMapperPackage>
		<targetModelPackage>com.dili.assets.domain</targetModelPackage>
		<targetServicePackage>com.dili.assets.service</targetServicePackage>
		<targetControllerPackage>com.dili.assets.controller</targetControllerPackage>
		<templateRootDir>${basedir}/mbg-templates</templateRootDir>
		<!-- XML生成路径 -->
		<targetResourcesProject>${basedir}/src/main/resources</targetResourcesProject>
		<targetXMLPackage>mapper</targetXMLPackage>
		
		
		<build.timestamp>${maven.build.timestamp}</build.timestamp>
        <maven.build.timestamp.format>yyyyMMddHHmmSSS</maven.build.timestamp.format>
	</properties>

	<!-- 父工程定义 -->
	<parent>
		<artifactId>assets-parent</artifactId>
		<groupId>com.dili</groupId>
		<version>1.0.0-SNAPSHOT</version>
	</parent>

	<!--地利 -->
	<distributionManagement>
		<repository>
			<id>central</id>
			<name>Artifactory Release Repository</name>
			<url>
                http://mvn2.diligrp.com/artifactory/libs-release-local
            </url>
		</repository>
		<snapshotRepository>
			<id>central</id>
			<name>Artifactory Snapshot Repository</name>
			<url>
                http://mvn2.diligrp.com/artifactory/libs-snapshot-local
            </url>
		</snapshotRepository>
	</distributionManagement>

	<profiles>
		<profile>
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<build.profile.id>dev</build.profile.id>
			</properties>
		</profile>
		<profile>
			<id>test</id>
			<properties>
				<build.profile.id>test</build.profile.id>
			</properties>
		</profile>
	</profiles>

	<build>
		<!-- 资源文件过滤 -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<!-- 编译JDK版本 -->
				<configuration>
					<source>13</source>
					<target>13</target>
					<encoding>UTF-8</encoding>
					<parameters>true</parameters>
					<!-- <compilerArgument>-proc:none</compilerArgument> -->
					<compilerArgs>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
					</compilerArgs>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>2.2.2.RELEASE</version>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<nonFilteredFileExtensions>
						<nonFilteredFileExtension>xls</nonFilteredFileExtension>
						<nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
					</nonFilteredFileExtensions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<version>2.2.5</version>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
					<execution>
						<id>validate-the-git-infos</id>
						<goals>
							<goal>validateRevision</goal>
						</goals>
					</execution>
				</executions>

				<configuration>
					<dotGitDirectory>${project.parent.basedir}/.git</dotGitDirectory>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
				</configuration>
			</plugin>
			<!-- jooq-codegen:generate -->
			<plugin>
				<groupId>org.jooq</groupId>
				<artifactId>jooq-codegen-maven</artifactId>
				<!--executions> <execution> <phase>generate-sources</phase> <goals> <goal>generate</goal> 
					</goals> </execution> </executions -->

				<configuration>
					<configurationFile>src/main/resources/JooqConfig.xml</configurationFile>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>

		<!-- spring boot 基类 -->
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>ss-beetl</artifactId>
			<version>${sharp-sword.version}</version>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>ss-processor</artifactId>
			<version>${sharp-sword.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.sun</groupId>
					<artifactId>tools</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.persistence</groupId>
					<artifactId>persistence-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- if you enable json support in spring mvc. -->
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.13</version>
		</dependency>

		<!-- =============== spring boot starters =============== -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.alibaba.cloud</groupId>
			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
			<version>2.1.1.RELEASE</version>
			<exclusions>
				<exclusion>
					<groupId>com.alibaba</groupId>
					<artifactId>fastjson</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.alibaba.cloud</groupId>
			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
			<version>2.1.1.RELEASE</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-openfeign</artifactId>
		</dependency>
		<!-- jooq starter -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jooq</artifactId>
		</dependency>
		<!-- 内部包 -->
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>commons</artifactId>
			<version>1.1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>uap-sdk</artifactId>
			<version>2.6.0-SNAPSHOT</version>
		</dependency>
		<!-- 验证框架 -->
		<dependency>
			<groupId>com.baidu.unbiz</groupId>
			<artifactId>fluent-validator-spring</artifactId>
			<version>1.0.9</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-context-support</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate-validator</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-log4j12</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>javax.persistence</artifactId>
			<version>2.2.1</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
		</dependency>
		<!--<dependency> <groupId>org.slf4j</groupId> <artifactId>log4j-over-slf4j</artifactId> 
			</dependency> <dependency> <groupId>org.slf4j</groupId> <artifactId>jul-to-slf4j</artifactId> 
			</dependency> -->

		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-api-mockito2 -->
		<!-- <dependency> <groupId>org.powermock</groupId> <artifactId>powermock-api-mockito2</artifactId> 
			<version>2.0.4</version> <scope>test</scope> </dependency> -->


		<dependency>
			<groupId>org.jmockit</groupId>
			<artifactId>jmockit</artifactId>
			<version>1.41</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.github.gavlyukovskiy</groupId>
			<artifactId>datasource-proxy-spring-boot-starter</artifactId>
			<version>1.5.8</version>
		</dependency>
		<dependency>
			<groupId>com.github.gavlyukovskiy</groupId>
			<artifactId>flexy-pool-spring-boot-starter</artifactId>
			<version>1.5.8</version>
			<exclusions>
				<exclusion>
					<groupId>com.vladmihalcea.flexy-pool</groupId>
					<artifactId>flexy-hikaricp</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.vladmihalcea.flexy-pool</groupId>
			<artifactId>flexy-druid</artifactId>
			<version>2.2.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.gavlyukovskiy</groupId>
			<artifactId>p6spy-spring-boot-starter</artifactId>
			<version>1.5.8</version>
		</dependency>
		<!-- <dependency> <groupId>org.jmock</groupId> <artifactId>jmock-junit5</artifactId> 
			<version>2.12.0</version> </dependency> <dependency> <groupId>org.mockito</groupId> 
			<artifactId>mockito-junit-jupiter</artifactId> <scope>test</scope> </dependency> 
			<dependency> <groupId>org.mockito</groupId> <artifactId>mockito-core</artifactId> 
			<scope>test</scope> </dependency> -->
	</dependencies>



</project>